kortana-mobile-xn/build_error_2.txt
Resolving dependencies...
Downloading packages...
  _fe_analyzer_shared 85.0.0 (97.0.0 available)
  analyzer 7.6.0 (11.0.0 available)
  analyzer_plugin 0.13.4 (0.14.5 available)
  build 2.5.4 (4.0.4 available)
  build_config 1.1.2 (1.3.0 available)
  build_resolvers 2.5.4 (3.0.4 available)
  build_runner 2.5.4 (2.12.2 available)
  build_runner_core 9.1.2 (9.3.2 available)
  clipboard 0.1.3 (3.0.14 available)
  confetti 0.7.0 (0.8.0 available)
  connectivity_plus 6.1.5 (7.0.0 available)
  custom_lint_core 0.7.5 (0.8.2 available)
  custom_lint_visitor 1.0.0+7.7.0 (1.0.0+9.0.0 available)
  dart_style 3.1.1 (3.1.7 available)
  device_info_plus 10.1.2 (12.3.0 available)
  eip55 1.0.2 (1.0.3 available)
  event 2.1.2 (3.1.0 available)
  fl_chart 0.69.2 (1.1.1 available)
  flutter_hooks 0.20.5 (0.21.3+1 available)
  flutter_riverpod 2.6.1 (3.2.1 available)
  flutter_secure_storage 9.2.4 (10.0.0 available)
  flutter_secure_storage_linux 1.2.3 (3.0.0 available)
  flutter_secure_storage_macos 3.1.3 (4.0.0 available)
  flutter_secure_storage_platform_interface 1.1.2 (2.0.1 available)
  flutter_secure_storage_web 1.2.1 (2.1.0 available)
  flutter_secure_storage_windows 3.1.2 (4.1.0 available)
  freezed 2.5.8 (3.2.5 available)
  freezed_annotation 2.4.4 (3.1.0 available)
  go_router 14.8.1 (17.1.0 available)
  hooks_riverpod 2.6.1 (3.2.1 available)
  js 0.6.7 (0.7.2 available)
  json_annotation 4.9.0 (4.11.0 available)
  json_rpc_2 3.0.3 (4.1.0 available)
  json_serializable 6.9.5 (6.13.0 available)
  local_auth 2.3.0 (3.0.1 available)
  local_auth_android 1.0.56 (2.0.5 available)
  local_auth_darwin 1.6.1 (2.0.3 available)
  local_auth_windows 1.0.11 (2.0.1 available)
  logger 1.4.0 (2.6.2 available)
  meta 1.17.0 (1.18.1 available)
  mobile_scanner 5.2.3 (7.2.0 available)
  package_info_plus 8.3.1 (9.0.0 available)
  palette_generator 0.3.3+7 (discontinued)
  pointycastle 3.9.1 (4.0.0 available)
  rive 0.13.20 (0.14.4 available)
  riverpod 2.6.1 (3.2.1 available)
  riverpod_analyzer_utils 0.5.9 (0.5.10 available)
  riverpod_annotation 2.6.1 (4.0.2 available)
  riverpod_generator 2.6.4 (4.0.3 available)
  sec 1.1.0 (1.1.1 available)
  share_plus 10.1.4 (12.0.1 available)
  share_plus_platform_interface 5.0.2 (6.1.0 available)
  source_gen 2.0.0 (4.2.0 available)
  source_helper 1.3.7 (1.3.10 available)
  very_good_analysis 6.0.0 (10.2.0 available)
  wallet 0.0.13 (0.0.18 available)
  walletconnect_flutter_v2 2.0.14 (discontinued replaced by reown_walletkit)
  web3dart 2.7.3 (3.0.2 available)
  web_socket_channel 2.4.0 (3.0.3 available)
  win32 5.15.0 (6.0.0 available)
  win32_registry 1.1.5 (3.0.2 available)
Got dependencies!
2 packages are discontinued.
60 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
Running Gradle task 'assembleRelease'...                        
Expected to find fonts for (packages/cupertino_icons/CupertinoIcons, MaterialIcons), but found (MaterialIcons). This usually means you are referring to font families in an IconData class but not including them in the assets section of your pubspec.yaml, are missing the package that would include them, or are missing "uses-material-design: true".
Font asset "MaterialIcons-Regular.otf" was tree-shaken, reducing it from 1645184 to 4960 bytes (99.7% reduction). Tree-shaking can be disabled by providing the --no-tree-shake-icons flag when building your app.
Checking the license for package CMake 3.22.1 in C:\Users\emi\AppData\Local\Android\Sdk\licenses
License for package CMake 3.22.1 accepted.
Preparing "Install CMake 3.22.1 v.3.22.1".
"Install CMake 3.22.1 v.3.22.1" ready.
Installing CMake 3.22.1 in C:\Users\emi\AppData\Local\Android\Sdk\cmake\3.22.1
"Install CMake 3.22.1 v.3.22.1" complete.
"Install CMake 3.22.1 v.3.22.1" finished.
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 warnings
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
3 warnings
C:\Users\emi\Desktop\blockchains\kortanablockchain-devhub\kortana-mobile-xn\android\app\src\main\java\io\flutter\plugins\GeneratedPluginRegistrant.java:44: error: package dev.flutter.plugins.integration_test does not exist
      flutterEngine.getPlugins().add(new dev.flutter.plugins.integration_test.IntegrationTestPlugin());
                                                                             ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\emi\Desktop\blockchains\kortanablockchain-devhub\kortana-mobile-xn\android\app\src\main\java\io\flutter\plugins\GeneratedPluginRegistrant.java:44: error: package dev.flutter.plugins.integration_test does not exist
        flutterEngine.getPlugins().add(new dev.flutter.plugins.integration_test.IntegrationTestPlugin());
                                                                               ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 15m 41s
Running Gradle task 'assembleRelease'...                          945.3s
Gradle task assembleRelease failed with exit code 1
